<resources>
    <string name="app_name">Money Control</string>

    <string name="title_activity_add_debt">Add Debt</string>
    <string name="title_activity_main">Debt Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">user@userhost.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_call">Call</string>
    <string name="action_sms">SMS</string>
    <string name="action_add_debt">Add Debt</string>
    <string name="action_delete">Delete</string>
    <string name="action_add_payment">Add Payment</string>
    <string name="owed_to_me">Owed To Me</string>
    <string name="owed_by_me">Owed By Me</string>
    <string name="person_name">Name</string>
    <string name="pick_user_content_description">Pick Contact</string>
    <string name="phone_number">Phone Number</string>
    <string name="amount">Amount</string>
    <string name="comment">Comment</string>
    <string name="person_image_description">In Case of Pic Available</string>
    <string name="error_msg_required_field">This Field is required</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="add_person">Add Person</string>
    <string name="title_activity_details_fragment">DetailsFragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."


    </string>
    <string name="title_activity_person_details">PersonDetails</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greater_amount_alert">Amount you entered is greater than debt amount</string>
    <string name="empty_error_msg">This Field is required</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="debt_reminder_notification_title_template">Debt reminder: %1$s</string>

    <string name="update_image">Update Image</string>
    <string name="payments_title">Payments details</string>
    <string name="pay_str">Pay</string>
    <string name="nav_person_tab">Person</string>
    <string name="nav_owed_to_me_tab">Owed To Me</string>
    <string name="nav_owed_by_me_tab">Owed By Me</string>
    <string name="nav_group_title_communicate">Communicate</string>
    <string name="nav_share_tab">Share</string>
    <string name="dated_label">Dated :</string>
    <string name="due_date_label">Date Due:</string>
    <string name="caps_iowe">OWE BY ME</string>
    <string name="caps_owed">OWE TO ME</string>
    <string name="paid_text">Paid</string>
    <string name="created_date_label">Created on :</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="unknown_error">Unknown error</string>
    <string name="sign_out_failed">Sign out failed</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete">Delete</string>
    <string name="delete_account_failed">Delete account failed</string>
    <string name="unknown_sign_in_response">Unknown sign in response</string>
    <string name="details_about_login">Tap Next to verify your account with your phone number. You don\'t need to manualy enter verification code if the number install in this phone...</string>
    <string name="nav_logout_tab">Logout</string>
    <string name="action_profile">Profile</string>
    <string name="title_activity_profile">Profile</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Your Name</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_title_email_address">Email Address</string>
    <string name="pref_default_amil_address">yourname@yourhost.com</string>

    <string name="debt_notification_title_template">Debt: %1$s</string>
    <string name="debt_reminder_notification_title">Review Record</string>
    <string name="debt_reminder_notification_body">Open for the new entry or review old one.</string>
    <string name="main_notification_channel_name">Primary</string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="share_message">Hey check out my app at: https://drive.google.com/open?id=1X3j_B3scMYbmSwAhDQpeIS4zlTBgd9r8</string>
    <string name="debt_alert_notification_title">Review Debtor</string>
    <string name="debt_alert_notification_body">due date is expiring today</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_library">Choose from Library</string>
    <string name="cancel">Cancel</string>
    <string name="add_photo_label">Add Photo!</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="auth_failed">Authentication Failed</string>


</resources>
