<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_person"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_person_tab" />
        <item
            android:id="@+id/nav_owed_to_me"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_owed_to_me_tab"
            app:actionLayout="@layout/menu_counter"/>

        <item
            android:id="@+id/nav_owed_by_me"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_owed_by_me_tab"
            app:actionLayout="@layout/menu_counter_to"/>
    </group>

    <item android:title="@string/nav_group_title_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share_tab" />
        </menu>
    </item>

</menu>
