<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.nnroh.moneycontrol.DetailsActivity">
    <item
        android:id="@+id/action_call"
        android:enabled="true"
        android:icon="@drawable/ic_call"
        android:title="@string/action_call"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_sms"
        android:enabled="true"
        android:icon="@drawable/ic_sms_black_24dp"
        android:title="@string/action_sms"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add_debt"
        android:orderInCategory="100"
        android:title="@string/action_add_debt"
        android:enabled="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_update_image"
        android:orderInCategory="100"
        android:title="@string/update_image"
        android:enabled="true"
        app:showAsAction="never" />

</menu>
