<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".App.AddPersonActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/iv_set_profile_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/person_image_description"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_avatar" />

                <ImageView
                    android:id="@+id/iv_camera_pick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/iv_set_profile_image"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/ic_photo_camera"
                    app:layout_anchor="@id/iv_set_profile_image"
                    app:layout_anchorGravity="bottom|end" />
            </RelativeLayout>


            <RadioGroup
                android:id="@+id/rg_debt_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_owed_to_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/owed_to_me"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                <RadioButton
                    android:id="@+id/rb_owed_by_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/owed_by_me"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:weightSum="3">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.6"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/et_full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:hint="@string/person_name"
                        android:inputType="textPersonName"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:paddingEnd="8dp"
                    android:paddingStart="0dp">

                    <ImageButton
                        android:id="@+id/ib_contacts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/ic_person_add"
                        android:contentDescription="@string/pick_user_content_description" />

                </RelativeLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:hint="@string/amount"
                    android:inputType="numberDecimal"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:counterOverflowTextAppearance="@style/TextAppearance.Design.Counter">

                <EditText
                    android:id="@+id/et_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:hint="@string/comment"
                    android:inputType=""
                    android:maxLength="50" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_date_due"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/payment_button"
                android:textColor="@android:color/white"
                tools:text="Date Due: Friday, March 29th 2017" />

            <Button
                android:id="@+id/btn_date_created"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/payment_button"
                android:textColor="@android:color/white"
                tools:text="Created on: Friday, March 29th 2017" />

        </LinearLayout>

    </ScrollView>


</FrameLayout>